--- a/chirp.client/index.html
+++ b/chirp.client/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/chirp_logo_dark.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#1d1d1d">
+    <meta name="theme-color" content="#1d1d1d" />
     <link href="https://fonts.cdnfonts.com/css/aileron" rel="stylesheet" />
     <title>Chirp</title>
   </head>
